kubernetes/messaging-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messaging-web
  template:
    metadata:
      labels:
        app: messaging-web
    spec:
      containers:
        - name: messaging-web
          image: messaging-web:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
