kubernetes/messaging-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: messaging-web-service
spec:
  type: LoadBalancer
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: messaging-web
