kubernetes/messaging-nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-nginx-ingress
  # annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: messaging-web-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: messaging-api-service
                port:
                  number: 4000
